<resources>
    <string name="app_name">MessageQ</string>
    <string name="action_settings">Settings</string>

    <string name="user_email_hint">User Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="lost_password">Lost Password?</string>
    <string name="display_name_hint">NickName</string>
    <string name="register">Register</string>
    <string name="cancel_button">Cancel</string>

    <string name="login_error_title">Login Error</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_title">Login</string>
    <string name="login_message">Checking..</string>

    <string name="register_error_title">Registering Error</string>
    <string name="register_error_message">Please make sure you enter nick name, email and password!</string>
    <string name="register_error_incorrect_values">Provide correct email and password with more than 6 characters</string>
    <string name="register_title">Registering</string>
    <string name="register_message">Please wait..</string>
    <string name="logout">Logout</string>
    <string name="add_location_condition">Add location condition</string>
    <string name="add_time_condition">Add time condition</string>
    <string name="about">about</string>
    <string name="address">Address</string>
    <string name="find">Find</string>
    <string name="test">test</string>


</resources>
