<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ChatActivity">

    <item
        android:id="@+id/locationCondition"
        android:title="@string/add_location_condition"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_map_marker"/>
    <item
        android:id="@+id/timeCondition"
        android:title="@string/add_time_condition"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/ic_clock_alert"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>